Update netlify.toml to use Ubuntu Noble 24.04 build image

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,5 +6,5 @@
   NODE_VERSION = "18"
 
 [build.image]
-  # Use the latest Ubuntu Focal build image
-  image = "focal"
+  # Use the latest Ubuntu Noble build image
+  image = "noble"
